<?xml version="1.0"?>
<package>
  <name>myo_ros</name>
  <version>0.1.2</version>
  <description>The myo_ros package</description>

  <maintainer email="rgariepy@clearpathrobotics.com">Ryan Gariepy</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/myo_ros</url>
  <author email="rgariepy@clearpathrobotics.com">Ryan Gariepy</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
